text-align correcting

--- a/styles/style.css
+++ b/styles/style.css
@@ -216,12 +216,18 @@ html {
     font-size: 16px;
   }
 }
+@media (max-width: 520px) {
+  .contacts {
+    display: none;
+  }
+  .main__content__header {
+    font-size: 24px;
+    margin-top: 5px;
+  }
+}
 @media (max-width: 510px) {
   .main__content {
     font-size: 16px;
-  }
-  .contacts {
-    display: none;
   }
   .header__icons-wrapper {
     margin-bottom: 10px;
@@ -229,10 +235,6 @@ html {
   .main__content__parameters-header {
     font-size: 24px;
     margin-top: 25px;
-  }
-  .main__content__header {
-    font-size: 24px;
-    margin-top: 5px;
   }
   .contacts {
     font-size: 16px;
@@ -250,6 +252,7 @@ html {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    text-align: center;
   }
   .main__content__parameters-list-item--price {
     font-size: 18px;
